force-app/main/default/objects/leaseworks__Fees_Schedule__c/leaseworks__Fees_Schedule__c.object-meta.xml
<CustomObject>
    <label>Fee Schedule</label>
    <nameField>
        <label>Fees Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fee Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>