force-app/main/default/objects/leaseworks__Fees_Schedule__c/fields/leaseworks__Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Amount_Due__c</fullName>
    <label>_Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>