force-app/main/default/objects/leaseworks__Fees_Schedule__c/fields/leaseworks__Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Amount_Paid__c</fullName>
    <label>Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>