force-app/main/default/objects/leaseworks__Fees_Schedule__c/fields/leaseworks__Periodicity__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Periodicity__c</fullName>
    <formula>TEXT(  leaseworks__Fees__r.leaseworks__Periodicity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Periodicity</label>
    <type>Text</type>
</CustomField>