force-app/main/default/objects/leaseworks__Fees_Schedule__c/fields/leaseworks__Y_Hidden_End_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_End_Date__c</fullName>
    <label>_End Date</label>
    <type>Date</type>
</CustomField>